--- a/iPhone/Axis Viewer/Resources/AVRootViewController.xib
+++ b/iPhone/Axis Viewer/Resources/AVRootViewController.xib
@@ -162,7 +162,7 @@
 					<string key="className">AVRootViewController</string>
 					<string key="superclassName">UITableViewController</string>
 					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">addPressed:</string>
+						<string key="NS.key.0">addWasPressed:</string>
 						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
